--- a/simple-rts/simple-rts.cabal
+++ b/simple-rts/simple-rts.cabal
@@ -20,6 +20,10 @@ cabal-version:       1.24
 extra-source-files:
   README.md
   CHANGELOG.md
+data-dir: cbits
+data-files:
+  main.c
+  Makefile
 
 source-repository head
   type: git
@@ -29,11 +33,15 @@ library
   hs-source-dirs:      src
   exposed-modules:
     Game.Simple.Rts
+  other-modules:
+    Paths_simple_rts
   build-depends:
-      base            >= 4.5    && < 4.14
+      base            >= 4.5      && < 4.14
+    , ivory           >= 0.1.0.10 && < 0.2
   default-language:    Haskell2010
   default-extensions:
     BangPatterns
+    DataKinds
     DeriveGeneric
     FlexibleInstances
     OverloadedStrings
@@ -41,3 +49,18 @@ library
     RecordWildCards
     ScopedTypeVariables
     TupleSections
+    TypeOperators
+
+executable simple-rts
+  hs-source-dirs:      app
+  main-is:             Main.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  other-modules:
+    Paths_simple_rts
+  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-A64m -with-rtsopts=-AL256m -with-rtsopts=-qn4
+  build-depends:
+      base
+    , simple-rts
+    , ivory-artifact  >= 0.1    && < 0.2
+    , ivory-backend-c >= 0.1    && < 0.2
+  default-language:    Haskell2010
