--- a/simple-rts/simple-rts.cabal
+++ b/simple-rts/simple-rts.cabal
@@ -38,6 +38,7 @@ library
   build-depends:
       base            >= 4.5      && < 4.14
     , ivory           >= 0.1.0.10 && < 0.2
+    , ivory-sdl       >= 0.1      && < 0.2
   default-language:    Haskell2010
   default-extensions:
     BangPatterns
