--- a/simple-rts/simple-rts.cabal
+++ b/simple-rts/simple-rts.cabal
@@ -45,6 +45,7 @@ library
     DataKinds
     DeriveGeneric
     FlexibleInstances
+    GADTs
     OverloadedStrings
     RankNTypes
     RecordWildCards
@@ -62,6 +63,7 @@ executable simple-rts
   build-depends:
       base
     , simple-rts
+    , ivory-sdl
     , ivory-artifact  >= 0.1    && < 0.2
     , ivory-backend-c >= 0.1    && < 0.2
   default-language:    Haskell2010
