--- a/ivory-sdl/ivory-sdl.cabal
+++ b/ivory-sdl/ivory-sdl.cabal
@@ -15,6 +15,10 @@ cabal-version:       1.24
 extra-source-files:
   README.md
   CHANGELOG.md
+data-dir: cbits
+data-files:
+  main.c
+  Makefile
 
 source-repository head
   type: git
@@ -33,6 +37,35 @@ library
     DataKinds
     DeriveGeneric
     FlexibleInstances
+    OverloadedStrings
+    RankNTypes
+    RecordWildCards
+    ScopedTypeVariables
+    TupleSections
+    TypeOperators
+
+executable ivory-sdl-grumpy
+  hs-source-dirs:      app
+  main-is:             Grumpy.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  other-modules:
+    Paths_ivory_sdl
+  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-A64m -with-rtsopts=-AL256m -with-rtsopts=-qn4
+  build-depends:
+      base
+    , ivory
+    , ivory-sdl
+    , ivory-string
+    , ivory-memory
+    , ivory-artifact  >= 0.1    && < 0.2
+    , ivory-backend-c >= 0.1    && < 0.2
+  default-language:    Haskell2010
+  default-extensions:
+    BangPatterns
+    DataKinds
+    DeriveGeneric
+    FlexibleInstances
+    GADTs
     OverloadedStrings
     RankNTypes
     RecordWildCards
