--- a/ivory-nuklear/cbits/Makefile
+++ b/ivory-nuklear/cbits/Makefile
@@ -1,6 +1,6 @@
 MODULES=main_game.c
-CFLAGS=-Wall -pedantic -Werror -Wshadow -Wstrict-aliasing -Wstrict-overflow $(shell pkg-config --cflags sdl2)
-LDFLAGS=$(shell pkg-config --libs sdl2)
+CFLAGS=-Wall -pedantic -Werror -Wshadow -Wstrict-aliasing -Wstrict-overflow $(shell pkg-config --cflags sdl2 gl glu glew)
+LDFLAGS=$(shell pkg-config --libs sdl2 gl glu glew) -lm
 
 all: main.c
 	gcc -g ${CFLAGS} -o ivory-nuklear main.c ${MODULES} ${LDFLAGS}
